
```toml
[tool.poetry]
name = "image-to-text"
version = "0.1.0"
description = "uAgent image-to-text"
authors = ["Tanay Godse tanay.godse@fetch.ai"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uagents = {git = "https://github.com/fetchai/uAgents.git", rev = "v0.15.2"}
transformers = "^4.44.2"
pillow = "^10.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
